# repoops-handoff

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_CONTRACT.md  DATA_CONTRACTS.md  DEVELOPMENT.md  PATCH_NOTES_v0_skeleton.md  SAFETY_CONTRACT.md  SDD_v0.md  TEST_PLAN.md
examples/: repos.yaml
src/repoops/: __init__.py  cli.py  config.py  git_scan.py  notify.py  paths.py  report.py
tests/: conftest.py  test_config.py  test_git_scan.py  test_notify.py  test_report.py
